// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox In Color Context 1`] = `
<div
  data-variant="tinted"
  data-color="accent"
>
  <div>
    <input
      id="checkbox-in-color-context"
      type="checkbox"
      checked
      aria-describedby="checkbox-in-color-context:description:1"
    >
    <label
      data-weight="regular"
      for="checkbox-in-color-context"
    >
      Checkbox label
    </label>
    <div
      data-field="description"
      id="checkbox-in-color-context:description:1"
    >
      Description
    </div>
  </div>
</div>
`;

exports[`Controlled 1`] = `
<fieldset>
  <legend data-weight="medium">
    Utdanningsnivå
  </legend>
  <div>
    <input
      id="components-checkbox--controlled-barnehage"
      type="checkbox"
      value="barnehage"
      checked
      name="my-controlled"
    >
    <label
      data-weight="regular"
      for="components-checkbox--controlled-barnehage"
    >
      Barnehage
    </label>
  </div>
  <div>
    <input
      id="components-checkbox--controlled-grunnskole"
      type="checkbox"
      value="grunnskole"
      name="my-controlled"
    >
    <label
      data-weight="regular"
      for="components-checkbox--controlled-grunnskole"
    >
      Grunnskole
    </label>
  </div>
  <div>
    <input
      id="components-checkbox--controlled-videregaende"
      type="checkbox"
      value="videregaende"
      checked
      name="my-controlled"
    >
    <label
      data-weight="regular"
      for="components-checkbox--controlled-videregaende"
    >
      Videregående
    </label>
  </div>
</fieldset>
<p
  data-field="validation"
  hidden
  id="«r5»"
>
</p>
<hr aria-hidden="true">
<p data-variant="default">
  (Annet innhold)
</p>
<hr aria-hidden="true">
<div style="display: flex; gap: var(--ds-size-2);">
  <p data-variant="default">
    Viser innhold for:
  </p>
  <button
    type="button"
    data-removable="true"
    aria-label="Slett Barnehage"
  >
    Barnehage
  </button>
  <button
    type="button"
    data-removable="true"
    aria-label="Slett Videregående"
  >
    Videregående
  </button>
</div>
<button
  data-variant="secondary"
  type="button"
  style="width: fit-content;"
>
  Tøm filtre
</button>
`;

exports[`Disabled 1`] = `
<fieldset>
  <legend data-weight="medium">
    Hvordan vil du helst at vi skal kontakte deg?
  </legend>
  <p data-variant="default">
    Velg de alternativene som er relevante for deg.
  </p>
  <div>
    <input
      id="components-checkbox--disabled-email"
      disabled
      type="checkbox"
      value="epost"
      checked
      name="my-disabled"
    >
    <label
      data-weight="regular"
      for="components-checkbox--disabled-email"
    >
      E-post
    </label>
  </div>
  <div>
    <input
      id="components-checkbox--disabled-telefon"
      disabled
      type="checkbox"
      value="telefon"
      name="my-disabled"
    >
    <label
      data-weight="regular"
      for="components-checkbox--disabled-telefon"
    >
      Telefon
    </label>
  </div>
  <div>
    <input
      id="components-checkbox--disabled-sms"
      disabled
      type="checkbox"
      value="sms"
      name="my-disabled"
    >
    <label
      data-weight="regular"
      for="components-checkbox--disabled-sms"
    >
      SMS
    </label>
  </div>
  <p
    data-field="validation"
    hidden
    id="«r9»"
  >
  </p>
</fieldset>
`;

exports[`Focused 1`] = `
<div>
  <input
    id="checkbox-preview"
    type="checkbox"
    value="value"
    aria-describedby="checkbox-preview:description:1"
  >
  <label
    data-weight="regular"
    for="checkbox-preview"
  >
    Checkbox label
  </label>
  <div
    data-field="description"
    id="checkbox-preview:description:1"
  >
    Description
  </div>
</div>
`;

exports[`Group 1`] = `
<fieldset>
  <legend data-weight="medium">
    Hvordan vil du helst at vi skal kontakte deg?
  </legend>
  <p data-variant="default">
    Velg de alternativene som er relevante for deg.
  </p>
  <div>
    <input
      id="components-checkbox--group-email"
      type="checkbox"
      value="epost"
      checked
      name="my-group"
    >
    <label
      data-weight="regular"
      for="components-checkbox--group-email"
    >
      E-post
    </label>
  </div>
  <div>
    <input
      id="components-checkbox--group-telefon"
      type="checkbox"
      value="telefon"
      name="my-group"
    >
    <label
      data-weight="regular"
      for="components-checkbox--group-telefon"
    >
      Telefon
    </label>
  </div>
  <div>
    <input
      id="components-checkbox--group-sms"
      type="checkbox"
      value="sms"
      name="my-group"
    >
    <label
      data-weight="regular"
      for="components-checkbox--group-sms"
    >
      SMS
    </label>
  </div>
  <p
    data-field="validation"
    hidden
    id="«r1»"
  >
  </p>
</fieldset>
`;

exports[`Indeterminate In Table 1`] = `
<table>
  <colgroup>
    <col style="width: 1px;">
    <col style="width: 10em;">
    <col>
  </colgroup>
  <thead>
    <tr>
      <th>
        <div>
          <input
            id="components-checkbox--indeterminate-in-table-all"
            aria-label="Velg alle"
            type="checkbox"
            value="all"
            name="components-checkbox--indeterminate-in-table"
          >
        </div>
      </th>
      <th>
        Navn
      </th>
      <th>
        Utdanningsnivå
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <div>
          <input
            id="components-checkbox--indeterminate-in-table-1"
            aria-labelledby="components-checkbox--indeterminate-in-table-1-name"
            type="checkbox"
            value="1"
            name="components-checkbox--indeterminate-in-table"
          >
        </div>
      </td>
      <td id="components-checkbox--indeterminate-in-table-1-name">
        Lise Nordmann
      </td>
      <td>
        Barnehage
      </td>
    </tr>
    <tr>
      <td>
        <div>
          <input
            id="components-checkbox--indeterminate-in-table-2"
            aria-labelledby="components-checkbox--indeterminate-in-table-2-name"
            type="checkbox"
            value="2"
            checked
            name="components-checkbox--indeterminate-in-table"
          >
        </div>
      </td>
      <td id="components-checkbox--indeterminate-in-table-2-name">
        Ola Nordmann
      </td>
      <td>
        Grunnskole
      </td>
    </tr>
    <tr>
      <td>
        <div>
          <input
            id="components-checkbox--indeterminate-in-table-3"
            aria-labelledby="components-checkbox--indeterminate-in-table-3-name"
            type="checkbox"
            value="3"
            checked
            name="components-checkbox--indeterminate-in-table"
          >
        </div>
      </td>
      <td id="components-checkbox--indeterminate-in-table-3-name">
        Kari Nordmann
      </td>
      <td>
        Videregående
      </td>
    </tr>
    <tr>
      <td>
        <div>
          <input
            id="components-checkbox--indeterminate-in-table-4"
            aria-labelledby="components-checkbox--indeterminate-in-table-4-name"
            type="checkbox"
            value="4"
            name="components-checkbox--indeterminate-in-table"
          >
        </div>
      </td>
      <td id="components-checkbox--indeterminate-in-table-4-name">
        Per Nordmann
      </td>
      <td>
        Barnehage
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`One Option 1`] = `
<fieldset>
  <legend data-weight="medium">
    Bekreft at du er over 18 år
  </legend>
  <p data-variant="default">
    For at vi skal kunne sende deg opplysningen du ber om, må du bekrefte at du er myndig.
  </p>
  <div>
    <input
      id="components-checkbox--one-option"
      type="checkbox"
      value="samtykke"
    >
    <label
      data-weight="regular"
      for="components-checkbox--one-option"
    >
      Jeg bekrefter at jeg er over 18 år
    </label>
  </div>
</fieldset>
`;

exports[`Preview 1`] = `
<div>
  <input
    id="checkbox-preview"
    type="checkbox"
    value="value"
    aria-describedby="checkbox-preview:description:1"
  >
  <label
    data-weight="regular"
    for="checkbox-preview"
  >
    Checkbox label
  </label>
  <div
    data-field="description"
    id="checkbox-preview:description:1"
  >
    Description
  </div>
</div>
`;

exports[`Read Only 1`] = `
<fieldset>
  <legend data-weight="medium">
    Hvordan vil du helst at vi skal kontakte deg?
  </legend>
  <p data-variant="default">
    Velg de alternativene som er relevante for deg.
  </p>
  <div>
    <input
      id="components-checkbox--read-only-email"
      readonly
      type="checkbox"
      value="epost"
      checked
      name="my-readonly"
    >
    <label
      data-weight="regular"
      for="components-checkbox--read-only-email"
    >
      E-post
    </label>
  </div>
  <div>
    <input
      id="components-checkbox--read-only-telefon"
      readonly
      type="checkbox"
      value="telefon"
      name="my-readonly"
    >
    <label
      data-weight="regular"
      for="components-checkbox--read-only-telefon"
    >
      Telefon
    </label>
  </div>
  <div>
    <input
      id="components-checkbox--read-only-sms"
      readonly
      type="checkbox"
      value="sms"
      name="my-readonly"
    >
    <label
      data-weight="regular"
      for="components-checkbox--read-only-sms"
    >
      SMS
    </label>
  </div>
  <p
    data-field="validation"
    hidden
    id="«r7»"
  >
  </p>
</fieldset>
`;

exports[`With Error 1`] = `
<fieldset>
  <legend data-weight="medium">
    Hvordan vil du helst at vi skal kontakte deg?
  </legend>
  <p data-variant="default">
    Velg de alternativene som er relevante for deg.
  </p>
  <div>
    <input
      id="components-checkbox--with-error-email"
      aria-describedby="«r3»"
      aria-invalid="true"
      type="checkbox"
      value="epost"
      checked
      name="my-error"
    >
    <label
      data-weight="regular"
      for="components-checkbox--with-error-email"
    >
      E-post
    </label>
  </div>
  <div>
    <input
      id="components-checkbox--with-error-telefon"
      aria-describedby="«r3»"
      aria-invalid="true"
      type="checkbox"
      value="telefon"
      name="my-error"
    >
    <label
      data-weight="regular"
      for="components-checkbox--with-error-telefon"
    >
      Telefon
    </label>
  </div>
  <div>
    <input
      id="components-checkbox--with-error-sms"
      aria-describedby="«r3»"
      aria-invalid="true"
      type="checkbox"
      value="sms"
      name="my-error"
    >
    <label
      data-weight="regular"
      for="components-checkbox--with-error-sms"
    >
      SMS
    </label>
  </div>
  <p
    data-field="validation"
    id="«r3»"
  >
    Du må velge minst to kontaktalternativ
  </p>
</fieldset>
`;
